--- a/index.html
+++ b/index.html
@@ -43,39 +43,29 @@
     </div>
   </nav>
 
-  <header class="bg-primary text-white">
-   <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
+  <header class="bg-primary text-white p-0 mh-100">
+    <div class="container-fluid p-0" >
+   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel"  data-interval="2000">
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="la.jpg" alt="Los Angeles">
+    <div class="carousel-item active">
+      <img class="d-block w-100 " src="la.jpg" alt="First slide">
     </div>
-
-    <div class="item">
-      <img src="chicago.jpg" alt="Chicago">
+    <div class="carousel-item">
+      <img class="d-block w-100 " src="chicago.jpg" alt="Second slide">
     </div>
-
-    <div class="item">
-      <img src="ny.jpg" alt="New York">
+    <div class="carousel-item">
+      <img class="d-block w-100 " src="ny.jpg" alt="Third slide">
     </div>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
 </div>
   </header>
 
