--- a/index.html
+++ b/index.html
@@ -15,15 +15,49 @@
 
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script type="text/javascript">
+    $(function () {
+  $(document).scroll(function () {
+    var $nav = $(".navbar fixed-top");
+    $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+  });
+});
+  </script>
+  <style type="text/css">
+    .carousel {
+  max-height: 700px;
+  overflow: hidden;
+
+  .item img {
+    width: 100%;
+    height: auto;
+  }
+  
+}
+body{
+    font-family: 400 Lato, sans-serif;
+  }
+  .abt{
+    font-family:  Lato,
+  }
+nav{
+  opacity: 1
+}
+  
+
+  </style>
+
 
 </head>
 
-<body id="page-top">
+<body id="page-top" >
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Logo</a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info shadow" id="mainNav">
+    <div class="container-fluid ">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><h4 class="display-6"> Logo</h4></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,7 +88,7 @@
       <img class="d-block w-100 " src="chicago.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100 " src="ny.jpg" alt="Third slide">
+      <img class="d-block w-100 " src="ny.jpg" alt="Third slide" height="700px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -73,17 +107,26 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-          <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-          </ul>
+          <h2 class="abt">About</h2>
+          <p class="lead"  size="6vw">Bharath Textile Engineering, an ISO 9001: 2015 certified company, was founded in 1973 and are manufacturers of precision components for Automobile, Pump and Textile Industries.
+
+We aim to provide a wide range of components by understanding the requirements of the customers, thus serving and fabricating our range accordingly.
+
+Our intensive industry experience and know-how has helped us carve a niche for ourselves in the domestic market. Having established a strong image in India, we look forward to placing our foot in the international market in the nearby future. Our rigorous efforts have strengthened our relationship with existing clients while drawing new clients.
+</p>
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-8 mx-auto">
+
+      <p><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
+      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+</div>
   </section>
 
   <section id="services" class="bg-light">
