--- a/index.html
+++ b/index.html
@@ -17,42 +17,54 @@
   <link href="css/scrolling-nav.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <script type="text/javascript">
-    $(function () {
-  $(document).scroll(function () {
-    var $nav = $(".navbar fixed-top");
-    $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
-  });
-});
-  </script>
+  
   <style type="text/css">
     .carousel {
-  max-height: 700px;
+  max-height: 500px;
   overflow: hidden;
-
-  .item img {
+}
+  .carousel-item {
     width: 100%;
     height: auto;
   }
   
-}
 body{
     font-family: 400 Lato, sans-serif;
-  }
+    overflow-y: : scroll;
+     }
+         @-moz-document url-prefix() { /* Disable scrollbar Firefox */
+            html{
+              scrollbar-width: none;
+            }
+          }
+          body {
+            margin: 0; /* remove default margin */
+            scrollbar-width: none; /* Also needed to disable scrollbar Firefox */
+            -ms-overflow-style: none;  /* Disable scrollbar IE 10+ */
+            overflow-y: scroll;
+          }
+          body::-webkit-scrollbar {
+            width: 0px;
+            background: transparent; /* Disable scrollbar Chrome/Safari/Webkit */
+          }
   .abt{
-    font-family:  Lato,
+    font-family:  400 Lato, Montserrat
   }
-nav{
-  opacity: 1
+.main-text
+{
+    position: absolute;
+    top: 250px;
+    width: 100%;
+    color: #FFF;
+    text-align: center;
 }
-  
 
   </style>
 
 
 </head>
 
-<body id="page-top" >
+<body id="page-top" class="scroll" >
 
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info shadow" id="mainNav">
@@ -61,54 +73,65 @@ nav{
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="container-fluid">
+         <div class="collapse navbar-collapse" id="navbarResponsive">
+           <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
+               </li>
+               <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#services">Products</a>
+               </li>
+                <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                </li>
+            </ul>
       </div>
     </div>
+    </div>
+</div>
   </nav>
 
   <header class="bg-primary text-white p-0 mh-100">
     <div class="container-fluid p-0" >
-   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel"  data-interval="2000">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100 " src="la.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 " src="chicago.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 " src="ny.jpg" alt="Third slide" height="700px">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel"  data-interval="2000">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+               <img class="d-block w-100 " src="la.jpg" alt="First slide">
+             </div>
+             <div class="carousel-item">
+                <img class="d-block w-100 " src="chicago.jpg" alt="Second slide">
+              </div>
+             <div class="carousel-item">
+                <img class="d-block w-100 " src="ny.jpg" alt="Third slide" height="700px">
+             </div>
+         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="main-text hidden-xs">
+                <div class="">
+                    <h1> Welcome </h1>
+                      </div>
+                    </div>
 </div>
   </header>
 
   <section id="about">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="abt">About</h2>
-          <p class="lead"  size="6vw">Bharath Textile Engineering, an ISO 9001: 2015 certified company, was founded in 1973 and are manufacturers of precision components for Automobile, Pump and Textile Industries.
+          <p style="text-align: justify;" size="6vw">Bharath Textile Engineering, an ISO 9001: 2015 certified company, was founded in 1973 and are manufacturers of precision components for Automobile, Pump and Textile Industries.
 
 We aim to provide a wide range of components by understanding the requirements of the customers, thus serving and fabricating our range accordingly.
 
@@ -117,23 +140,14 @@ Our intensive industry experience and know-how has helped us carve a niche for o
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-8 mx-auto">
-
-      <p><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div>
+    
   </section>
 
   <section id="services" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Services we offer</h2>
+          <h2>Products</h2>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
         </div>
       </div>
@@ -154,7 +168,7 @@ Our intensive industry experience and know-how has helped us carve a niche for o
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Bharath Textile Engineering Pvt Ltd 2020</p>
     </div>
     <!-- /.container -->
   </footer>
