--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@ body{
             <div class="carousel-item active">
                <img class="d-block w-100 " src="la.jpg" alt="First slide">
              </div>
+            
              <div class="carousel-item">
-                <img class="d-block w-100 " src="chicago.jpg" alt="Second slide">
-              </div>
-             <div class="carousel-item">
-                <img class="d-block w-100 " src="ny.jpg" alt="Third slide" height="700px">
+                <img class="d-block w-100 " src="ny.jpg" alt="Third slide">
              </div>
          </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
