--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html{
 
 </head>
 
-<body id="page-top" class="scroll" oncontextmenu="return false">
+<body id="page-top" class="scroll" data-spy="scroll" data-target=".navbar" oncontextmenu="return false">
 
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info shadow" id="mainNav">
