--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ html{
 </div>
   </header>
 
-  <section id="about">
+  <section id="about" class="bg-light">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -193,7 +193,7 @@ Our intensive industry experience and know-how has helped us carve a niche for o
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
-      <h3 style="text-align: center; margin-bottom: 10; padding-bottom: 4vw;">Our Customers</h1>    
+      <h2 style="text-align: center; padding-bottom: 4vw;">Our Customers</h1>    
         </div>
       </div>
       
