change in image sizes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&family=Karla&family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:wght@500&family=Karla&family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/caro.css">
   <style type="text/css">
@@ -69,7 +69,7 @@ html{
 }
 .card-img-top {
     width: 100%;
-    height: 20vw;
+    /*height: 20vw;*/
     object-fit: cover;
 }
 .imgbg{
@@ -84,7 +84,7 @@ html{
   </style>
 </head>
 
-<body id="page-top" class="scroll" data-spy="scroll" data-target=".navbar" data-offset="140" oncontextmenu="return false">
+<body id="page-top" class="scroll" data-spy="scroll" data-target=".nav-item" data-offset="210" oncontextmenu="return false">
 
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bgcolo shadow" id="mainNav">
@@ -126,7 +126,7 @@ html{
 
   <header class="bg-light text-white p-0 mh-100">
     <div class="container-fluid p-0" >
-     <img class="imgbg d-block w-100 responsive " src="1028unitpic.png" alt="unit " >
+     <img class="imgbg d-block w-100 responsive " src="1028unitpic.png" alt="unit" loading="lazy" >
   
                     </div>
 
@@ -153,7 +153,7 @@ Our intensive industry experience and know-how has helped us carve a niche for o
      <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-             <h2 style="text-align: center; padding-bottom: 4vw; "class="abt">Products</h2>    
+             <h2 style="text-align: center; padding-bottom: 2vw; "class="abt">Products</h2>    
         </div>
       </div>
           
@@ -192,7 +192,7 @@ Our intensive industry experience and know-how has helped us carve a niche for o
                 <div class="carousel-item">
                     <div class="col-md-4">
                         <div class="card card-body">
-                            <img src="8503.jpg" class="card-img-top" alt="pot.png">
+                            <img src="8503.png" class="card-img-top responsive" alt="pot.png">
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@ Our intensive industry experience and know-how has helped us carve a niche for o
 </div>
 </section>
 <section id="quality" class="bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 class="abt">Quality</h2>
@@ -243,9 +243,9 @@ Our intensive industry experience and know-how has helped us carve a niche for o
     </div>
   </section>
 
-  <section id="customer">
+  <section id="customer" >
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding-bottom: 10vw;">
       <div class="row">
         <div class="col-md-12">
       <h2 style="text-align: center; " class="abt">Our Customers</h2>    
