--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Bharath Textile Engineering">
 
   <title>Bharath Textile Engineering</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +29,7 @@
     <div class="container-fluid ">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <picture>
-  <source srcset="150logo.png" media="(max-width: 400px)">
+  <source srcset="150logo.png" media="(max-width: 405px)">
   <source srcset="300logo.png">
   <img src="300logo.png" alt="logo">
 </picture>
