--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid ">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <picture>
-  <source srcset="150logo.png" media="(max-width: 405px)">
+  <source srcset="150LOGO.png" media="(max-width: 405px)">
   <source srcset="300logo.png">
   <img src="300logo.png" alt="logo">
 </picture>
