--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content=""> <!-- description for google search engine -->
-  <meta name="author" content="Bharath Textile Engineering">
+  <meta name="description" content=" manufacturers of quality equipments and gears for textile and mechanical industries , stringent quality control and selective manufacturing processes to ensure highest quality "> <!-- description for google search engine -->
+  <meta name="author" content="Bharath Textile Engineers">
 
   <title>Bharath Textile Engineering</title>
   <link rel="icon" type="image/x-icon" href="icon.png">
